# ncftools

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
.github/workflows/: publish.yml
SHP_NC/: 003_net_faces.dbf  003_net_faces.shp  003_net_faces.shx
SHP_TRANS/: trans_zone.dbf  trans_zone.shp  trans_zone.shx  trans_zone_extend.dbf  trans_zone_extend.shp  trans_zone_extend.shx
ncftools/: __init__.py  cli.py  describe.py  meshinfo.py  nc2shp.py  transzone1.py  transzone2.py
prototype/meshinfo/: mesh_info.py
prototype/nc2shp/: mesh2pol.py
prototype/transzone/: transzone1.py  transzone2.py
