[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ncftools"
version = "0.6.0"
authors = [
    { name = "aaronchh", email = "aaronhsu219@gmail.com" },
]
description = "A collection of tools for working with NetCDF files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "netCDF4>=1.6.0",
    "geopandas>=0.12.0",
    "shapely>=1.8.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
include = ["ncftools*"]

[project.urls]
Homepage = "https://github.com/AaronOET/ncftools"

[project.scripts]
ncftools-info = "ncftools.describe:main"
ncftools = "ncftools.cli:main"
meshinfo = "ncftools.meshinfo:main"
nc2shp = "ncftools.nc2shp:main"
transzone1 = "ncftools.transzone1:main"
transzone2 = "ncftools.transzone2:main"
